--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
-    "polars>=1.37.1",
+    "duckdb>=1.4.3",
 ]
 
 [build-system]
@@ -18,6 +18,7 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "marimo[recommended]>=0.19.4",
+    "pyrefly>=0.49.0",
     "pytest>=9.0.2",
     "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.1",
