added test coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "coverage>=7.13.1",
     "marimo[recommended]>=0.19.4",
     "pyrefly>=0.49.0",
     "pytest>=9.0.2",
